--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.ssl.key-store=classpath:wx2.fenglingtime.com.jks
 server.ssl.key-store-password=0fre1rw1ml6
 server.ssl.key-store-type=JKS
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/p-two?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/htkj-xcx?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=fenglingtime.com123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 wx.appid=wx5218454cea09b145
