--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,12 @@ server.ssl.key-store-password=g898z46v5fgtw
 #server.ssl.key-store=classpath:wx2.fenglingtime.com.jks
 #server.ssl.key-store-password=0fre1rw1ml6
 server.ssl.key-store-type=JKS
-#spring.datasource.url=jdbc:mysql://94.191.44.140:3306/htkj-xcx?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8
-#spring.datasource.username=root
-#spring.datasource.password=fenglingtime.com123
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/htkj-xcx?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://94.191.44.140:3306/htkj-xcx?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=fenglingtime.com123
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/htkj-xcx?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8
+#spring.datasource.username=root
+#spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 wx.appid=wx5218454cea09b145
 wx.appsecret=51d9b1b10e1071a4c417ca28d6db682a
