--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,10 @@ server.ssl.key-store-type=JKS
 #spring.datasource.url=jdbc:mysql://94.191.44.140:3306/htkj-xcx?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8
 #spring.datasource.username=root
 #spring.datasource.password=fenglingtime.com123
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/htkj-xcx?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/htkj-xcx?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8
+#spring.datasource.username=root
+#spring.datasource.password=Fenglingtime.com123
+spring.datasource.url=jdbc:mysql://154.8.144.143:3306/htkj-xcx?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=Fenglingtime.com123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
